fix: icono tienda visible

--- a/static/style.css
+++ b/static/style.css
@@ -271,6 +271,9 @@ justify-content:center;
 
 }
 
+.tienda-icon{
+    color:#ffffff;
+}
 
 
 .login{
